--- a/framework/Makefile.am
+++ b/framework/Makefile.am
@@ -1,36 +1,40 @@
-FRAMEWORK_DIR = ../framework
+lib_LTLIBRARIES	=	libscianfinancial.la
 
-SCIAN_FINANCIAL_FRAMEWORK_SRC	=	\
-		$(FRAMEWORK_DIR)/BenchMark.cpp \
-		$(FRAMEWORK_DIR)/BenchMark.h \
-		$(FRAMEWORK_DIR)/GenericMamaCache.cpp \
-		$(FRAMEWORK_DIR)/GenericMamaCache.h \
-		$(FRAMEWORK_DIR)/GenericMamaManager.cpp \
-		$(FRAMEWORK_DIR)/GenericMamaManager.h \
-		$(FRAMEWORK_DIR)/GenericMamaUtilities.cpp \
-		$(FRAMEWORK_DIR)/GenericMamaUtilities.h \
-		$(FRAMEWORK_DIR)/GenericUtilities.cpp \
-		$(FRAMEWORK_DIR)/GenericUtilities.h \
-		$(FRAMEWORK_DIR)/GzFileHandler.cpp \
-		$(FRAMEWORK_DIR)/GzFileHandler.h \
-		$(FRAMEWORK_DIR)/Logger.cpp \
-		$(FRAMEWORK_DIR)/Logger.h \
-		$(FRAMEWORK_DIR)/Mama2RssEngine.cpp \
-		$(FRAMEWORK_DIR)/Mama2RssEngine.h \
-		$(FRAMEWORK_DIR)/MamaCachingCallback.cpp \
-		$(FRAMEWORK_DIR)/MamaCachingCallback.h \
-		$(FRAMEWORK_DIR)/MamaRecordedMessage.cpp \
-		$(FRAMEWORK_DIR)/MamaRecordedMessage.h \
-		$(FRAMEWORK_DIR)/MamaRecordedMessageCodec.cpp \
-		$(FRAMEWORK_DIR)/MamaRecordedMessageCodec.h \
-		$(FRAMEWORK_DIR)/PlaybackDQPublisherCallback.cpp \
-		$(FRAMEWORK_DIR)/PlaybackDQPublisherCallback.h \
-		$(FRAMEWORK_DIR)/RecordingMamaSubscriptionCallback.cpp \
-		$(FRAMEWORK_DIR)/RecordingMamaSubscriptionCallback.h \
-		$(FRAMEWORK_DIR)/StatTracker.cpp \
-		$(FRAMEWORK_DIR)/StatTracker.h \
-		$(FRAMEWORK_DIR)/Threader.cpp \
-		$(FRAMEWORK_DIR)/Threader.h
+LIBS		+=	-lwombatcommon -lmama -lmamacpp -lz
+
+AM_LDFLAGS	=	-no-undefined
+
+libscianfinancial_la_SOURCES	=	\
+		BenchMark.cpp \
+		BenchMark.h \
+		GenericMamaCache.cpp \
+		GenericMamaCache.h \
+		GenericMamaManager.cpp \
+		GenericMamaManager.h \
+		GenericMamaUtilities.cpp \
+		GenericMamaUtilities.h \
+		GenericUtilities.cpp \
+		GenericUtilities.h \
+		GzFileHandler.cpp \
+		GzFileHandler.h \
+		Logger.cpp \
+		Logger.h \
+		Mama2RssEngine.cpp \
+		Mama2RssEngine.h \
+		MamaCachingCallback.cpp \
+		MamaCachingCallback.h \
+		MamaRecordedMessage.cpp \
+		MamaRecordedMessage.h \
+		MamaRecordedMessageCodec.cpp \
+		MamaRecordedMessageCodec.h \
+		PlaybackDQPublisherCallback.cpp \
+		PlaybackDQPublisherCallback.h \
+		RecordingMamaSubscriptionCallback.cpp \
+		RecordingMamaSubscriptionCallback.h \
+		StatTracker.cpp \
+		StatTracker.h \
+		Threader.cpp \
+		Threader.h
 
 clean:
 	rm -rf .libs _libs
