--- a/mama2rss/Makefile.am
+++ b/mama2rss/Makefile.am
@@ -1,11 +1,6 @@
-FRAMEWORK_DIR		=	../framework
-include ../framework/Makefile.am
-
-VPATH			=	@srcdir@/../framework/
-
 bin_PROGRAMS		=	mama2rss
 AM_LDFLAGS		=	-L@srcdir@/../framework/ -L@srcdir@/../thirdparty/mongoose
 AM_CPPFLAGS		=	-I@srcdir@/../thirdparty/
-LDADD			=	-lmongoose -lwombatcommon -lmama -lmamacpp -lrt -ldl -lz
+LDADD			=	-lscianfinancial -lmongoose -lmama -lmamacpp
 
-mama2rss_SOURCES	=	mama2rss.cpp $(SCIAN_FINANCIAL_FRAMEWORK_SRC)
+mama2rss_SOURCES	=	mama2rss.cpp
