Changes made to enable error correction when MAMA is not found in the compilation process, and modified makefiles to use new openmama2rss structure.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,3 @@
-SUBDIRS = framework thirdparty mama2rss openmamacapture openmamareplay
+SUBDIRS = framework thirdparty openmama2rss openmamacapture openmamareplay
+
+ACLOCAL_AMFLAGS = -I m4
